fixed overflow on map, and added login verification along with alert for user to login with proper credentials

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -2,6 +2,10 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 
+body {
+  overflow: hidden;
+}
+
 .modal-backdrop {
   position: sticky !important;
 }
